# nonebot-plugin-system-command

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
nonebot_plugin_command_prompt/: __init__.py
nonebot_plugin_system_command/: __init__.py  config.py  utils.py
